syntax = "proto3";

package rpc;

// Interface exported by the server.
service JobService {
  rpc ScheduleCommand(JobCommand) returns (stream JobStatusUpdate) {}
  rpc StopCommand(StopCommandRequest) returns (JobStatusUpdate) {}
  rpc Heartbeat(HeartbeatPing) returns (HeartbeatPong) {}
}


message JobCommand {
  string name = 1;
  string args = 2;
  uint64 job_id = 3;
}

message StopCommandRequest {
  uint64 job_id = 1;
}

message JobStatusUpdate {
  string cmd = 1;
  int64 PID = 2;
  bool complete = 3;
  int64 exit = 4;
  int64 start_ts = 5;
  int64 stop_ts = 6;
  float runtime = 7;
  string stdout = 8;
  string stderr = 9;
}

message HeartbeatPing {
}

message HeartbeatPong {
}
